# dlpack-rs

./: Cargo.toml  README.md
examples/from_numpy/: Cargo.toml  main.py  run.sh
examples/from_numpy/src/: lib.rs
src/: dlpack.rs  dlpack_impl.rs  lib.rs
