[package]
name = "from_numpy"
version = "0.1.0"
authors = ["SunDoge <384813529@qq.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dlpack-rs = {path = "../.."}
libc = "0.2.74"

[lib]
crate-type = ["dylib"]